Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: 'Welcome to Threadly Help Center!'
 ---
 
 <img
@@ -14,20 +14,20 @@ description: 'Welcome to the home of your new documentation'
   alt="Hero Dark"
 />
 
-## Setting up
+## Getting Started
 
 The first step to world-class documentation is setting up your editing environments.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
+    title="Installing Threadly"
     icon="pen-to-square"
     href="https://mintlify.com/docs/quickstart"
   >
     Get your docs set up locally for easy development
   </Card>
   <Card
-    title="Preview Changes"
+    title="Accessing Threadly in Slack"
     icon="image"
     href="https://mintlify.com/docs/development"
   >
@@ -39,33 +39,27 @@ The first step to world-class documentation is setting up your editing environme
 
 Update your docs to your brand and add valuable content for the best user conversion.
 
-<CardGroup cols={2}>
+<CardGroup cols={3}>
   <Card
-    title="Customize Style"
+    title="Channel Groups"
     icon="palette"
     href="https://mintlify.com/docs/settings/global"
   >
     Customize your docs to your company's colors and brands
   </Card>
   <Card
-    title="Reference APIs"
+    title="Custom Call-to-Actions (CTAs)"
     icon="code"
     href="https://mintlify.com/docs/api-playground/openapi"
   >
     Automatically generate endpoints from an OpenAPI spec
   </Card>
   <Card
-    title="Add Components"
+    title="Profiles"
     icon="screwdriver-wrench"
     href="https://mintlify.com/docs/components/accordion"
   >
     Build interactive features and designs to guide your users
   </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
+
 </CardGroup>
